fix param swag
